Fix spacing on fieldsets.

--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -108,3 +108,18 @@ p + .usa-list {
 .usa-label {
   max-width: 100%;
 }
+
+// USWDS Fieldset:
+// Give fieldsets a margin-top to compensate for fieldsets that have legends, but no labels
+// See https://github.com/uswds/uswds/issues/4153
+.usa-fieldset {
+  margin-top: units(3);
+}
+// Don't double up margin-top on fieldsets that have labels
+.usa-fieldset > label:first-of-type {
+  margin-top: 0;
+}
+// Don't double up margin-top on fieldsets that have legends
+.usa-fieldset > legend:first-of-type {
+  margin-top: 0;
+}
